# Moppy

./: .gitignore  README.md  readme.md
andino_ws/src/image_data_collector/: __init__.py  package.xml  setup.py  step.txt
andino_ws/src/image_data_collector/resource/: image_data_collector
andino_ws/src/image_data_collector/scripts/: image_saver.py  image_saver_auto.py
docs/: Simulation.md  Simulation.txt  checkbox.md  project_structure.md
install/: local_setup.sh  setup.sh
install/andino_base/share/andino_base/: package.bash  package.zsh
install/andino_description/share/andino_description/: local_setup.dsv  package.dsv  package.sh  package.zsh
install/andino_firmware/share/andino_firmware/: package.ps1  package.sh
install/andino_hardware/share/andino_hardware/: package.bash  package.dsv  package.sh
install/andino_slam/share/andino_slam/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.zsh
install/node_remover_plugin/lib/node_remover_plugin/: node_remover_plugin
install/node_remover_plugin/share/node_remover_plugin/: package.bash  package.sh
log/: latest_build
ml_pipeline/artifacts/: step.txt
ml_pipeline/configs/: data.yaml
ml_pipeline/notebooks/: 01.ipynb
src/simulation/: Simulation.md  Simulation.txt
src/simulation/data_capture/: README.md  collect_data.sh  lidar_capture.py  room_simulator.py
src/simulation/ros2_ws/: .gitignore  Simulation.md  check_andino_webots.sh  checkbox.md  copy_mesh_files.sh
test_model/my_model/: yolo_detect.py
test_model/my_model/train/: args.yaml  results.csv
(+344 files in other folders)
